# q2data2docx

./: .gitignore  README.md  pyproject.toml  run_dev.ps1
q2data2docx/: __init__.py  excel_format.py  q2data2docx.py
test-data/test01/: test.docx  test.xlsx
test-data/test02/: test.docx  test.xlsx
test-data/test03/: test.docx  test.xlsx
test-data/test04/: test.docx  test.xlsx
test-result/: test-result.docx
tests/: test_0.py  test_1.py  test_excel_format.py
